2010-01-06  Tadashi MATSUO  <tad@mymail.twin.jp>

	* twittering-mode.el
	(twittering-read-timeline-spec-with-completion): return nil for
	an invalid timeline spec string.
	(twittering-update-mode-line): the delimiter followed by a
	timeline spec string on mode-line is changed to a whitespace.
	(twittering-timeline-spec-bookmark): new variable for timeline
	spec bookmark.
	(twittering-extract-timeline-spec): support timeline spec
	bookmark.

	* test/test-twittering-mode.el (timeline-spec): add tests of
	timeline spec normalization.

2010-01-04  Tadashi MATSUO  <tad@mymail.twin.jp>

	* twittering-mode.el (twittering-last-requested-timeline-spec):
	new variable storing the last requested timeline spec.
	(twittering-last-retrieved-timeline-spec): new variable storing
	the last successfully retrieved timeline spec.
	(twittering-last-timeline-retrieved): removed.
	(twittering-last-host): removed.
	(twittering-last-method): removed.
	(twittering-convert-last-timeline-retrieved): removed.
	(twittering-last-timeline-spec): removed.
	(twittering-get-twits): do not update the information of the last
	request.
	(twittering-get-and-render-timeline): update the information of
	the last request instead of `twittering-get-twits'.
	(twittering-current-timeline): replace `twittering-get-twits' by
	`twittering-get-and-render-timeline'.
	(twittering-erase-old-statuses): replace `twittering-get-twits' by
	`twittering-get-and-render-timeline'.
	(twittering-initial-timeline-spec): new variable.

2010-01-03  Tadashi MATSUO  <tad@mymail.twin.jp>

	* twittering-mode.el, test/test-twittering-mode.el: rebase the
	`timeline-spec' branch. The new timeline spec based on
	S-expression is introduced.

	* twittering-mode.el (twittering-timeline-spec-to-string): add.
	(twittering-extract-timeline-spec): add.
	(twittering-string-to-timeline-spec): add.
	(twittering-timeline-spec-singlep): add.
	(twittering-timeline-spec-to-host-method): add.
	(twittering-host-method-to-timeline-spec): add.